Aanpassingen records en users